<resources>
    <string name="app_name">News Cycle</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="email_text">Email</string>
    <string name="confirm_text">CONFIRM</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="forgot_password_text"><u>Forgot password?</u></string>
    <string name="password_text">Password</string>
    <string name="password_confirm_text">Confirm Password</string>
    <string name="popular">Popular</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="filler_time">23 hours ago</string>
    <string name="filler_author">Author: </string>
    <string name="filler_title">Title</string>
    <string name="drawer_open">Draw Open</string>
    <string name="drawer_close">Draw Close</string>
    <string name="logout_dialog">Are you logging out?</string>
    <string name="paragraph_filler">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur justo nulla, euismod nec orci sit amet, pretium bibendum leo. In pharetra, ante in rutrum dictum, dui sapien vestibulum nisi, id laoreet eros est pellentesque sapien. Etiam vitae fringilla orci. Duis at neque eu nisl consectetur molestie. Vestibulum interdum molestie hendrerit. Phasellus vestibulum lacus nulla. Etiam at nisl sodales, ultrices dolor quis, convallis dolor. Nam varius iaculis iaculis. Maecenas iaculis neque in ultricies semper. Donec urna lacus, viverra vel gravida nec, porta non lacus. Aliquam facilisis mi id erat iaculis mollis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla vehicula dictum convallis.

Vestibulum tincidunt ex ante, at pulvinar tellus pellentesque in. Quisque tincidunt tempus nulla, a posuere purus ultricies id. In nec convallis magna, nec commodo odio. Nunc non leo lacus. Aliquam erat volutpat. Vestibulum ut augue neque. Maecenas non nunc gravida, dictum mauris sit amet, lacinia neque. Cras eget quam id leo posuere accumsan sed a urna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin vel scelerisque purus. Donec egestas turpis eros, vitae luctus felis porttitor et. Proin ac maximus sapien. Vestibulum mattis velit porttitor mattis finibus. Praesent gravida, turpis vitae mattis fermentum, orci massa luctus turpis, et egestas tortor lorem in nulla.

Proin eget quam ac purus pellentesque varius. In risus quam, finibus id nisi eget, laoreet finibus erat. Duis finibus ligula a dui sodales, vitae vulputate lorem vulputate. Mauris ante est, cursus sed imperdiet a, imperdiet luctus ex. Praesent tempus sapien a nunc faucibus, eget pretium turpis rhoncus. Integer ipsum magna, maximus sit amet rutrum vel, gravida ut elit. Integer in quam ut nibh mattis vehicula in vehicula turpis. Duis quis nisl felis. Quisque justo nibh, consequat ac ex vel, gravida hendrerit mi. Mauris porttitor, velit ut vulputate pretium, risus libero porttitor mi, a cursus dui sapien nec est. Etiam suscipit tellus imperdiet ante tristique, ac congue elit vulputate.

Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam sed enim eleifend, tincidunt diam sed, tincidunt justo. Nullam rhoncus luctus tellus, a accumsan erat bibendum nec. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec a tincidunt leo, eget dapibus ante. Nunc tortor purus, scelerisque vitae dignissim id, lobortis vel metus. Vestibulum vulputate ultrices odio, bibendum dictum sem fringilla ut. Aenean accumsan venenatis tincidunt. Phasellus eros ex, viverra vel neque ac, convallis sagittis tellus. Fusce aliquam rhoncus arcu eu tincidunt. Ut blandit sit amet lacus eu pellentesque. Phasellus accumsan risus non tellus laoreet, vitae consequat turpis imperdiet. Phasellus accumsan enim vitae facilisis auctor. Pellentesque eu laoreet purus, vitae auctor nibh. Curabitur non turpis ac ante pellentesque aliquam sed sed erat. Proin erat velit, feugiat eu sodales ut, scelerisque eu nulla.

Donec tempus sem leo, a condimentum diam volutpat vitae. Quisque porttitor erat interdum, tempor neque vitae, semper ligula. Etiam eleifend lacus eget ex iaculis, ac scelerisque neque tristique. Praesent vel porttitor ipsum. Morbi eget neque varius, pellentesque metus eu, hendrerit elit. Nunc tempus faucibus mauris non congue. Praesent a accumsan erat.</string>
</resources>
