<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_login_main_container"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/input_rounded_short"
        android:hint="@string/email_text"
        android:textColorHint="#575454"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_rounded_short"
        android:hint="@string/password_text"
        android:textColorHint="#575454"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_rounded_ripple"
        android:focusable="true"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/login_text"
        android:textColor="#5FCCCA"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_rounded_ripple"
        android:fontFamily="@font/open_sans_semi_bold"
        android:focusable="true"
        android:text="@string/register_text"
        android:textColor="#5FCCCA"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
</androidx.constraintlayout.widget.ConstraintLayout>