<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/regi_email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/input_rounded_short"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#575454"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regi_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_rounded_short"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#575454"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regi_email" />

    <EditText
        android:id="@+id/regi_password_confirm"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_rounded_short"
        android:hint="@string/password_confirm_text"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#575454"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regi_password" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_rounded_short"
        android:fontFamily="@font/open_sans_semi_bold"
        android:focusable="true"
        android:text="@string/confirm_text"
        android:textColor="#5FCCCA"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regi_password_confirm" />


</androidx.constraintlayout.widget.ConstraintLayout>