<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="loginViewModel"
            type="com.newscycle.viewmodel.LoginViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/regi_email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/input_rounded_short"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:text="@={loginViewModel.email}"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#575454"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/regi_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_rounded_short"
        android:text="@={loginViewModel.pass}"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#575454"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regi_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/regi_password_confirm"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_rounded_short"
        android:hint="@string/password_confirm_text"
        android:inputType="textPassword"
        android:text="@={loginViewModel.passConfirm}"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#575454"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regi_password" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_rounded_short"
        android:fontFamily="@font/open_sans_semi_bold"
        android:focusable="true"
        android:onClick="@{() -> loginViewModel.register(loginViewModel.email, loginViewModel.pass, loginViewModel.passConfirm)}"
        android:text="@string/confirm_text"
        android:textColor="#5FCCCA"
        android:textSize="18sp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regi_password_confirm" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>