<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="article"
            type="com.newscycle.data.models.ArticleModel" />
    </data>
    <com.google.android.material.card.MaterialCardView
    android:id="@+id/article_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/article_scrollview"
            android:background="#F7F9F9"
            app:layout_constraintTop_toBottomOf="@id/article_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/article_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:padding="6dp"
                        android:layout_margin="6dp"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/article_image"
                        android:text="@string/filler_title"/>

                    <ImageView
                        android:id="@+id/article_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:layout_constraintTop_toBottomOf="@id/article_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/article_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/filler_time"
                        android:textColor="@color/black"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintTop_toBottomOf="@id/article_image"
                        app:layout_constraintEnd_toEndOf="@id/article_image"/>

                    <TextView
                    android:id="@+id/article_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_margin="24dp"
                    android:text="@string/paragraph_filler"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/article_image"
                    app:layout_constraintStart_toStartOf="@id/article_image"
                    app:layout_constraintTop_toBottomOf="@id/article_time"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</com.google.android.material.card.MaterialCardView>
</layout>